include/altdss/capi/alt.h

    ALTDSS_CAPI_DLL void Alt_CE_Get_RegisterNames(char*** resultPtr, int32_t *resultDims, void* pce);
    ALTDSS_CAPI_DLL void Alt_CE_Get_RegisterValues(double** resultPtr, int32_t *resultDims, void* pce);
    ALTDSS_CAPI_DLL void Alt_LoadShape_UseFloat64(void *objPtr);
    ALTDSS_CAPI_DLL void Alt_LoadShape_UseFloat32(void *objPtr);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_ByteStream(int8_t** resultPtr, int32_t* resultDims, void* pmon);
    ALTDSS_CAPI_DLL int32_t Alt_Monitor_Get_SampleCount(void* pmon);
    ALTDSS_CAPI_DLL const char* Alt_Monitor_Get_FileName(void* pmon);
    ALTDSS_CAPI_DLL int32_t Alt_Monitor_Get_NumChannels(void* pmon);
    ALTDSS_CAPI_DLL int32_t Alt_Monitor_Get_RecordSize(void* pmon);
    ALTDSS_CAPI_DLL void Alt_Monitor_Show(void* pmon);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_Channel(double** resultPtr, int32_t *resultDims, void* pmon, int32_t index);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_dblFreq(double** resultPtr, int32_t *resultDims, void* pmon);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_dblHour(double** resultPtr, int32_t *resultDims, void* pmon);
    ALTDSS_CAPI_DLL void Alt_Monitor_Get_Header(char*** resultPtr, int32_t *resultDims, void* pmon);
    ALTDSS_CAPI_DLL void Alt_Transformer_Get_WdgVoltages(double** resultPtr, int32_t *resultDims, void* elem, int32_t winding);
    ALTDSS_CAPI_DLL void Alt_Transformer_Get_WdgCurrents(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL void Alt_Transformer_Get_LossesByType(double** resultPtr, int32_t *resultDims, void* elem);
    ALTDSS_CAPI_DLL int32_t Alt_Meter_Get_TotalCustomers(void* elem);