src/CAPI/CAPI_Alt.pas

    
    // Using externally controlled memory
    if not IsFloat32 then
        elem.SetDataPointers(HoursPtr, PMultPtr, QMultPtr, Stride)
    else
        elem.SetDataPointersSingle(HoursPtr, PMultPtr, QMultPtr, Stride)
end;
//------------------------------------------------------------------------------
procedure Alt_LoadShape_UseFloat64(elem: TLoadshapeObj); CDECL;
begin
    elem.UseFloat64();
end;
//------------------------------------------------------------------------------
procedure Alt_LoadShape_UseFloat32(elem: TLoadshapeObj); CDECL;
begin
    elem.UseFloat32();
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_RegisterNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    Result: PPAnsiCharArray0;
    k: Integer;
    names: ArrayOfString = NIL;
    cls: TDSSClass;
begin
    cls := elem.ParentClass;
    if not (cls is TCktElementClass) then
    begin
        Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, 0);
        Exit;
    end;

    names := TCktElementClass(cls).GetRegisterNames(elem);
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, Length(names));
    for k := 0 to High(names) do
    begin
        Result[k] := DSS_CopyStringAsPChar(names[k]);
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_CE_Get_RegisterValues(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TDSSCktElement); CDECL;
var
    num: Integer = 0;
    values: PDoubleArray;
    cls: TDSSClass;
begin
    cls := elem.ParentClass;
    if not (cls is TCktElementClass) then
    begin
        DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 0);
        Exit;
    end;
    values := TCktElementClass(cls).GetRegisterValues(elem, num);
    if (num = 0) or (values = NIL) then
    begin
        DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 0);
        Exit;
    end;
    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, num);
    Move(values^, ResultPtr^, num * SizeOf(Double));
end;
//------------------------------------------------------------------------------
procedure Alt_Monitor_Show(pmon: TMonitorObj); CDECL;
begin
    PMon.TranslateToCSV(TRUE);
end;
//------------------------------------------------------------------------------
procedure Alt_Monitor_Get_ByteStream(var ResultPtr: PByte; ResultCount: PAPISize; pmon: TMonitorObj); CDECL;
begin
    DSS_RecreateArray_PByte(ResultPtr, ResultCount, pmon.MonitorStream.Size);
    pmon.MonitorStream.Seek(0, soFromBeginning);
    pmon.MonitorStream.Read(ResultPtr^, pmon.MonitorStream.Size);   // Move it all over
    // leaves stream at the end
end;
//------------------------------------------------------------------------------
function Alt_Monitor_Get_SampleCount(pmon: TMonitorObj): Integer; CDECL;
begin
    Result := pmon.SampleCount;
end;
//------------------------------------------------------------------------------
function Alt_Monitor_Get_FileName(pmon: TMonitorObj): PAnsiChar; CDECL;
begin
    Result := PAnsiChar(pmon.CSVFileName);
end;
//------------------------------------------------------------------------------
function Alt_Monitor_Get_NumChannels(pmon: TMonitorObj): Integer; CDECL;
begin
    Result := pmon.RecordSize;
end;
//------------------------------------------------------------------------------
function Alt_Monitor_Get_RecordSize(pmon: TMonitorObj): Integer; CDECL;
begin
    Result := pmon.RecordSize;
end;
//------------------------------------------------------------------------------
procedure Alt_Monitor_Get_Channel(var ResultPtr: PDouble; ResultCount: PAPISize; pmon: TMonitorObj; Index: Integer); CDECL;
// Return an array of doubles for selected channel
var
    Result: PDoubleArray0;
    i: Integer;
    SngBuffer: pSingleArray;
    AllocSize: Integer;
begin
    DefaultResult(ResultPtr, ResultCount);
    if pmon.SampleCount <= 0 then
        Exit;

    pmon.MonitorStream.Seek(256 + 4 * 4, soFromBeginning); // Skip header

    if (Index < 1) or (Index > pmon.RecordSize) then // NumChannels
    begin
        DoSimpleMsg(pmon.DSS,
            'Monitors.Channel: invalid channel index (%d), monitor "%s" has %d channels.',
            [Index, pmon.Name, pmon.RecordSize],
            5888);
        Exit;
    end;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, pmon.SampleCount);

    AllocSize := Sizeof(Single) * (pmon.RecordSize + 2); // Include Hour and Second fields
    Index := Index + 2; // Skip Hour and Second fields
    SngBuffer := Allocmem(AllocSize); // Need a buffer to convert from float32 to float64
    for i := 1 to pmon.SampleCount do
    begin
        pmon.MonitorStream.Read(sngBuffer[1], AllocSize);  // read rest of record
        Result[i - 1] := sngBuffer[Index];
    end;
    Reallocmem(SngBuffer, 0);  // Dispose of buffer
end;
//------------------------------------------------------------------------------
procedure Alt_Monitor_Get_dblHourFreq(pmon: TMonitorObj; freq: Boolean; var ResultPtr: PDouble; ResultCount: PAPISize); // local function
// Return an array of doubles for time in hours
var
    Result: PDoubleArray0;
    k, i: Integer;
    FirstCol: String;
    SngBuffer: pSingleArray;
    hr_freq: Single;
    sec_harm: Single;
    AllocSize: Integer;
    MonitorStream: TMemoryStream;
    FirstColTarget: String;
    smult: Double;
begin
    DefaultResult(ResultPtr, ResultCount);
    if pmon.SampleCount <= 0 then
        Exit;

    if freq then
    begin
        FirstColTarget := 'freq';
        smult := 0;
    end
    else
    begin
        FirstColTarget := 'hour';
        smult := 1.0 / 3600.0;
    end;

    MonitorStream := pmon.MonitorStream;
    MonitorStream.Seek(256 + 4 * 4, soFromBeginning); // Skip header
    FirstCol := pmon.Header.Strings[0];

    if Sysutils.CompareText(FirstCol, FirstColTarget) <> 0 then
    begin   // Not the target solution, so return nil array
        MonitorStream.Seek(0, soFromEnd); // leave stream at end
        Exit;
    end;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, pmon.SampleCount);
    AllocSize := Sizeof(Single) * pmon.RecordSize;
    SngBuffer := Allocmem(AllocSize);
    k := 0;
    for i := 1 to pmon.SampleCount do
    begin
        MonitorStream.Read(hr_freq, SizeOf(hr_freq));  // Hour, or frequency
        MonitorStream.Read(sec_harm, SizeOf(sec_harm));   // Seconds past the hour, or harmonic
        MonitorStream.Read(sngBuffer[1], AllocSize);  // read rest of record
        Result[k] := hr_freq + sec_harm * smult;
        k += 1;
    end;
    Reallocmem(SngBuffer, 0);  // Dispose of buffer
end;

procedure Alt_Monitor_Get_dblFreq(var ResultPtr: PDouble; ResultCount: PAPISize; pmon: TMonitorObj); CDECL;
// Return an array of doubles for frequence for Harmonic solutions
begin
    Alt_Monitor_Get_dblHourFreq(pmon, false, ResultPtr, ResultCount);
end;

procedure Alt_Monitor_Get_dblHour(var ResultPtr: PDouble; ResultCount: PAPISize; pmon: TMonitorObj); CDECL;
// Return an array of doubles for time in hours
begin
    Alt_Monitor_Get_dblHourFreq(pmon, false, ResultPtr, ResultCount);
end;
//------------------------------------------------------------------------------
procedure Alt_Monitor_Get_Header(var ResultPtr: PPAnsiChar; ResultCount: PAPISize; pmon: TMonitorObj); CDECL;
// Variant list of strings with names of all channels
var
    Result: PPAnsiCharArray0;
    k: Integer;
    ListSize: Integer;
begin
    DefaultResult(ResultPtr, ResultCount);
    if pmon.RecordSize <= 0 then
        Exit;

    ListSize := pmon.RecordSize;
    DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, ListSize);

    k := 0;
    while k < ListSize do
    begin
        Result[k] := DSS_CopyStringAsPChar(pmon.Header.Strings[k + 2]);
        Inc(k);
    end;
end;
//------------------------------------------------------------------------------
procedure Alt_Transformer_Get_WdgVoltages(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TTransfObj); CDECL;
begin
    if (elem.ActiveWinding > 0) and (elem.ActiveWinding <= elem.NumWindings) then
    begin
        DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * elem.nphases);
        if elem.Enabled then
            elem.GetWindingVoltages(elem.ActiveWinding, pComplexArray(ResultPtr));
        Exit;
    end;
    DefaultResult(ResultPtr, ResultCount);
end;
//------------------------------------------------------------------------------
procedure Alt_Transformer_Get_WdgCurrents(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TTransfObj); CDECL;
var
    NumCurrents: Integer;
begin
    NumCurrents := 2 * elem.NPhases * elem.NumWindings; // 2 currents per winding
    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * NumCurrents);
    if elem.Enabled then
        elem.GetAllWindingCurrents(pComplexArray(ResultPtr));
end;
//------------------------------------------------------------------------------
procedure Alt_Transformer_Get_LossesByType(var ResultPtr: PDouble; ResultCount: PAPISize; elem: TTransfObj); CDECL;
// Returns an array with (TotalLosses, LoadLosses, NoLoadLosses) for the current active transformer, in VA
var 
    CResult: PComplexArray; // this array is one-based, see DSSUcomplex
begin
    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * 3);
    CResult := PComplexArray(ResultPtr);
    elem.GetLosses(CResult[1], CResult[2], CResult[3]);
    // Keep the results in VA (NOT kVA) for consistency with CktElement_Get_Losses
end;
//------------------------------------------------------------------------------
function checkLoadList(elem: TEnergyMeterObj): Boolean;
begin
    Result := true;
    if (elem.LoadList = NIL) then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            elem.DoSimpleMsg('LoadList for %s is not initialized. Try solving or running "Makebuslist" first.', [elem.FullName], 8987);
        end;
        Result := false;
    end;
end;

function checkSequenceList(elem: TEnergyMeterObj): Boolean;
begin
    Result := true;
    if (elem.SequenceList = NIL) then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            elem.DoSimpleMsg('SequenceList for %s is not initialized. Try solving or running "Makebuslist" first.', [elem.FullName], 8988);
        end;
        Result := false;
    end;
end;

function Alt_Meter_Get_TotalCustomers(elem: TEnergyMeterObj): Integer; CDECL;
var
    PD_Element: TPDElement;
begin
    Result := 0;
    if (not checkSequenceList(elem)) or (elem.Circuit.Buses = NIL) then 
        Exit;

    PD_Element := elem.SequenceList.Get(1);
    if PD_Element = NIL then
        Exit;
